// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 1: Einzelperson ledig ZH, 100k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 625400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 675300,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 725500,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74700,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 776000,
    "steuern": 14700,
  },
  {
    "ahv": 15100,
    "ausgaben": 57400,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 321700,
    "steuern": 9400,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 329100,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55300,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 336500,
    "steuern": 7300,
  },
  {
    "ahv": 32800,
    "ausgaben": 55400,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 343900,
    "steuern": 7400,
  },
  {
    "ahv": 32800,
    "ausgaben": 55400,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 351300,
    "steuern": 7400,
  },
  {
    "ahv": 32800,
    "ausgaben": 55400,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 358700,
    "steuern": 7400,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 2: Paar verheiratet ZH, 100k+80k, beide 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 993500,
    "steuern": 26500,
  },
  {
    "ahv": 0,
    "ausgaben": 86600,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1135900,
    "steuern": 26600,
  },
  {
    "ahv": 0,
    "ausgaben": 86700,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1278900,
    "steuern": 26700,
  },
  {
    "ahv": 0,
    "ausgaben": 86900,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1422300,
    "steuern": 26900,
  },
  {
    "ahv": 29400,
    "ausgaben": 64900,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 650200,
    "steuern": 16900,
  },
  {
    "ahv": 49100,
    "ausgaben": 61400,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2031,
    "netto": 691900,
    "steuern": 13400,
  },
  {
    "ahv": 49100,
    "ausgaben": 61500,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2032,
    "netto": 733500,
    "steuern": 13500,
  },
  {
    "ahv": 49100,
    "ausgaben": 61600,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2033,
    "netto": 775100,
    "steuern": 13600,
  },
  {
    "ahv": 49100,
    "ausgaben": 61700,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2034,
    "netto": 816500,
    "steuern": 13700,
  },
  {
    "ahv": 49100,
    "ausgaben": 61800,
    "bvg": 54000,
    "einkommen": 103100,
    "jahr": 2035,
    "netto": 857800,
    "steuern": 13800,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 3: Paar Konkubinat ZH (sollte ≠ Verheiratet) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 84100,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2026,
    "netto": 995900,
    "steuern": 24100,
  },
  {
    "ahv": 0,
    "ausgaben": 84200,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2027,
    "netto": 1140800,
    "steuern": 24200,
  },
  {
    "ahv": 0,
    "ausgaben": 84300,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2028,
    "netto": 1286200,
    "steuern": 24300,
  },
  {
    "ahv": 0,
    "ausgaben": 84400,
    "bvg": 0,
    "einkommen": 180000,
    "jahr": 2029,
    "netto": 1432200,
    "steuern": 24400,
  },
  {
    "ahv": 29400,
    "ausgaben": 64100,
    "bvg": 22500,
    "einkommen": 141900,
    "jahr": 2030,
    "netto": 660900,
    "steuern": 16100,
  },
  {
    "ahv": 63700,
    "ausgaben": 61200,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2031,
    "netto": 717400,
    "steuern": 13200,
  },
  {
    "ahv": 63700,
    "ausgaben": 61300,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2032,
    "netto": 773700,
    "steuern": 13300,
  },
  {
    "ahv": 63700,
    "ausgaben": 61400,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2033,
    "netto": 829900,
    "steuern": 13400,
  },
  {
    "ahv": 63700,
    "ausgaben": 61600,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2034,
    "netto": 886000,
    "steuern": 13600,
  },
  {
    "ahv": 63700,
    "ausgaben": 61700,
    "bvg": 54000,
    "einkommen": 117700,
    "jahr": 2035,
    "netto": 942000,
    "steuern": 13700,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 4: Einzelperson hoch ZG, 200k, Pension 65 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 90000,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2026,
    "netto": 710000,
    "steuern": 30000,
  },
  {
    "ahv": 0,
    "ausgaben": 90100,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2027,
    "netto": 844500,
    "steuern": 30100,
  },
  {
    "ahv": 0,
    "ausgaben": 90200,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2028,
    "netto": 979200,
    "steuern": 30200,
  },
  {
    "ahv": 0,
    "ausgaben": 90300,
    "bvg": 0,
    "einkommen": 200000,
    "jahr": 2029,
    "netto": 1114000,
    "steuern": 30300,
  },
  {
    "ahv": 15100,
    "ausgaben": 63000,
    "bvg": 12500,
    "einkommen": 127600,
    "jahr": 2030,
    "netto": 704000,
    "steuern": 15000,
  },
  {
    "ahv": 32800,
    "ausgaben": 53000,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 713700,
    "steuern": 5000,
  },
  {
    "ahv": 32800,
    "ausgaben": 53100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 723400,
    "steuern": 5100,
  },
  {
    "ahv": 32800,
    "ausgaben": 53100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2033,
    "netto": 733100,
    "steuern": 5100,
  },
  {
    "ahv": 32800,
    "ausgaben": 53100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2034,
    "netto": 742800,
    "steuern": 5100,
  },
  {
    "ahv": 32800,
    "ausgaben": 53100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2035,
    "netto": 752500,
    "steuern": 5100,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 5: Reform 2030 — Eigenheim ZH (vor/nach 2030) 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2028,
    "netto": 1562900,
    "steuern": 17500,
  },
  {
    "ahv": 0,
    "ausgaben": 86500,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2029,
    "netto": 1601500,
    "steuern": 17500,
  },
  {
    "ahv": 15100,
    "ausgaben": 67200,
    "bvg": 12500,
    "einkommen": 77600,
    "jahr": 2030,
    "netto": 1137400,
    "steuern": 10200,
  },
  {
    "ahv": 32800,
    "ausgaben": 65100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2031,
    "netto": 1135100,
    "steuern": 8100,
  },
  {
    "ahv": 32800,
    "ausgaben": 65100,
    "bvg": 30000,
    "einkommen": 62800,
    "jahr": 2032,
    "netto": 1132700,
    "steuern": 8100,
  },
]
`;

exports[`Snapshot-Profile — sichert stille Engine-Drift ab > Profil 6: Vorbezug AHV 63 — Einzelperson 1`] = `
[
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2026,
    "netto": 625400,
    "steuern": 14600,
  },
  {
    "ahv": 0,
    "ausgaben": 74600,
    "bvg": 0,
    "einkommen": 100000,
    "jahr": 2027,
    "netto": 700500,
    "steuern": 14600,
  },
  {
    "ahv": 13100,
    "ausgaben": 69400,
    "bvg": 11300,
    "einkommen": 124300,
    "jahr": 2028,
    "netto": 305700,
    "steuern": 21400,
  },
  {
    "ahv": 28300,
    "ausgaben": 79100,
    "bvg": 27000,
    "einkommen": 155300,
    "jahr": 2029,
    "netto": 381900,
    "steuern": 31100,
  },
  {
    "ahv": 28300,
    "ausgaben": 64500,
    "bvg": 27000,
    "einkommen": 105300,
    "jahr": 2030,
    "netto": 422700,
    "steuern": 16500,
  },
  {
    "ahv": 28300,
    "ausgaben": 54100,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2031,
    "netto": 423900,
    "steuern": 6100,
  },
  {
    "ahv": 28300,
    "ausgaben": 54100,
    "bvg": 27000,
    "einkommen": 55300,
    "jahr": 2032,
    "netto": 425000,
    "steuern": 6100,
  },
]
`;
